// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthLayout > renders dark theme layout 1`] = `
<div>
  <script>
    !function(){try{var d=document.documentElement,n='data-theme',s='setAttribute';var e=localStorage.getItem('theme');if('system'===e||(!e&&false)){var t='(prefers-color-scheme: dark)',m=window.matchMedia(t);if(m.media!==t||m.matches){d.style.colorScheme = 'dark';d[s](n,'dark')}else{d.style.colorScheme = 'light';d[s](n,'light')}}else if(e){d[s](n,e|| '')}else{d[s](n,'dark')}if(e==='light'||e==='dark'||!e)d.style.colorScheme=e||'dark'}catch(e){}}()
  </script>
  <div
    style=""
  >
    <div
      class="relative flex h-screen"
    >
      <div
        class="absolute flex h-full w-full items-center justify-center overflow-y-auto lg:static lg:w-1/2 bg-[#171717] lg:bg-[hsl(var(--background))] bg-[radial-gradient(circle,rgba(255,255,255,0.07)_2px,transparent_2px)]"
        style="background-size: 24px 24px;"
      >
        <div
          class="hidden max-w-[576px] flex-col gap-6 px-4 lg:flex"
        >
          <div
            class=""
            style="width: 291px; height: 32px;"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 1497 164"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M115.175 107.912L139.598 136.586L153.656 161.428H92.1936L61.4452 107.912H115.175Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M153.64 161.437L184.338 107.921L122.892 0.861938H61.4452L153.64 161.437Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M30.7229 54.3643H92.1692L30.7485 161.423L0 107.907L30.7229 54.3643Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M299.955 51.9753L298.41 68.752C291.789 55.728 276.559 48.6641 260.227 48.6641C229.548 48.6641 209.021 70.9595 209.021 105.175C209.021 139.17 227.561 163.894 260.006 163.894C277.663 163.894 290.685 155.285 297.527 144.027L299.293 161.024H324.454V51.9753H299.955ZM297.086 106.5C297.086 126.146 284.947 139.612 266.186 139.612C247.425 139.612 235.948 125.925 235.948 106.5C235.948 87.074 247.646 73.167 266.407 73.167C285.167 73.167 297.086 86.8533 297.086 106.5Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M370.269 161.024V131.665L386.161 115.109L414.633 161.024H445.532L404.921 95.2417L446.415 51.9753H412.646L370.269 97.6699V0H343.563V161.024H370.269Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M535.959 51.9753L534.414 68.752C527.792 55.728 512.563 48.6641 496.23 48.6641C465.551 48.6641 445.025 70.9595 445.025 105.175C445.025 139.17 463.565 163.894 496.01 163.894C513.667 163.894 526.689 155.285 533.531 144.027L535.297 161.024H560.458V51.9753H535.959ZM533.089 106.5C533.089 126.146 520.95 139.612 502.19 139.612C483.429 139.612 471.952 125.925 471.952 106.5C471.952 87.074 483.65 73.167 502.41 73.167C521.171 73.167 533.089 86.8533 533.089 106.5Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M574.084 127.912C574.084 149.325 591.299 163.894 618.447 163.894C645.374 163.894 664.135 150.208 664.135 128.133C664.135 111.356 654.865 102.968 636.545 98.7736L616.902 94.1379C607.632 91.9305 602.776 87.957 602.776 81.7761C602.776 73.6085 608.956 68.752 619.551 68.752C629.924 68.752 636.104 74.7122 636.325 83.9836H661.927C661.707 62.7919 645.153 48.6641 620.654 48.6641C595.493 48.6641 577.394 61.4674 577.394 82.8798C577.394 100.319 586.885 109.59 606.529 114.005L626.172 118.641C635.883 120.848 638.753 124.822 638.753 130.34C638.753 138.287 631.91 143.365 619.33 143.365C606.97 143.365 599.907 137.404 599.686 127.912H574.084Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M706.063 161.024V101.423C706.063 85.0873 715.995 73.167 732.99 73.167C746.674 73.167 755.723 81.9968 755.723 100.319V161.024H782.65V93.9172C782.65 65.6616 768.525 48.6641 741.598 48.6641C725.927 48.6641 713.126 55.5072 706.283 66.1031V0H679.136V161.024H706.063Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M804.398 107.936C804.398 141.555 824.533 163.894 854.194 163.894C878.009 163.894 896.628 149.517 901.608 127.621H886.453C882.339 141.334 869.782 150.181 854.194 150.181C832.977 150.181 819.121 133.15 819.121 107.714C819.121 81.394 834.059 64.8056 855.276 64.8056C869.782 64.8056 882.339 72.9892 886.236 87.8082H901.175C897.061 65.6903 879.308 51.3136 855.06 51.3136C824.533 51.3136 804.398 74.3163 804.398 107.936Z"
                fill="#A3A3A3"
              />
              <path
                d="M912.548 107.714C912.548 140.228 935.064 163.894 965.808 163.894C996.551 163.894 1019.07 140.228 1019.07 107.714C1019.07 74.9798 996.551 51.3136 965.808 51.3136C935.064 51.3136 912.548 74.9798 912.548 107.714ZM927.703 107.493C927.703 82.7211 943.291 65.0268 965.808 65.0268C988.107 65.0268 1003.91 82.7211 1003.91 107.493C1003.91 132.708 988.107 150.181 965.808 150.181C943.291 150.181 927.703 132.708 927.703 107.493Z"
                fill="#A3A3A3"
              />
              <path
                d="M1053.57 161.24V105.281C1053.57 81.1729 1065.69 65.2479 1087.13 65.2479C1104.45 65.2479 1115.49 74.0951 1115.49 99.0884V161.24H1130.43V95.7707C1130.43 68.7868 1118.52 51.3136 1089.72 51.3136C1074.57 51.3136 1060.71 59.0549 1053.79 72.768L1051.62 54.189H1038.63V161.24H1053.57Z"
                fill="#A3A3A3"
              />
              <path
                d="M1145.73 131.159C1145.73 151.066 1160.45 163.894 1184.05 163.894C1207.86 163.894 1223.88 151.287 1223.88 132.044C1223.88 116.562 1215.66 107.936 1197.47 103.291L1179.5 98.646C1168.03 95.7707 1162.4 90.02 1162.4 81.8364C1162.4 70.3351 1170.62 63.9209 1185.35 63.9209C1199.42 63.9209 1207.86 71.2198 1208.3 83.6058H1222.8C1222.15 63.6997 1207.86 51.3136 1185.78 51.3136C1163.26 51.3136 1147.89 63.2573 1147.89 82.0576C1147.89 96.6554 1156.77 106.387 1174.95 111.032L1192.92 115.677C1205.26 118.773 1209.59 123.861 1209.59 132.708C1209.59 144.209 1200.07 151.287 1183.83 151.287C1169.11 151.287 1160.02 143.545 1160.02 131.159H1145.73Z"
                fill="#A3A3A3"
              />
              <path
                d="M1236.79 107.714C1236.79 140.228 1259.3 163.894 1290.04 163.894C1320.79 163.894 1343.3 140.228 1343.3 107.714C1343.3 74.9798 1320.79 51.3136 1290.04 51.3136C1259.3 51.3136 1236.79 74.9798 1236.79 107.714ZM1251.94 107.493C1251.94 82.7211 1267.53 65.0268 1290.04 65.0268C1312.34 65.0268 1328.15 82.7211 1328.15 107.493C1328.15 132.708 1312.34 150.181 1290.04 150.181C1267.53 150.181 1251.94 132.708 1251.94 107.493Z"
                fill="#A3A3A3"
              />
              <path
                d="M1378.46 161.24V0H1363.52V161.24H1378.46Z"
                fill="#A3A3A3"
              />
              <path
                d="M1449.85 163.894C1474.53 163.894 1490.77 151.729 1496.4 129.169H1482.11C1478.21 143.324 1467.17 150.844 1450.06 150.844C1427.55 150.844 1414.12 135.804 1413.04 109.705H1496.4V102.185C1496.4 71.8833 1477.13 51.3136 1448.76 51.3136C1418.89 51.3136 1398.54 74.3163 1398.54 107.714C1398.54 141.334 1419.1 163.894 1449.85 163.894ZM1448.76 64.3632C1468.47 64.3632 1481.46 78.0763 1481.46 98.646H1413.47C1416.07 77.634 1429.06 64.3632 1448.76 64.3632Z"
                fill="#A3A3A3"
              />
            </svg>
          </div>
          <p>
            The fastest way to deploy an application on Akash.Network
          </p>
          <div
            class="flex gap-4"
          >
            <div
              class="flex h-10 w-10 items-center justify-center rounded-md border border-[#E5E5E5] bg-white"
            >
              <svg
                class="lucide lucide-zap"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
                />
              </svg>
            </div>
            <div
              class="flex-1"
            >
              <h5
                class="font-semibold"
              >
                Generous Free Trial
              </h5>
              <p
                class="mt-1"
              >
                $100 of cloud compute credits so you can test real workloads.
              </p>
            </div>
          </div>
          <div
            class="flex gap-4"
          >
            <div
              class="flex h-10 w-10 items-center justify-center rounded-md border border-[#E5E5E5] bg-white"
            >
              <svg
                class="lucide lucide-rocket"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.5 16.5c-1.5 1.26-2 5-2 5s3.74-.5 5-2c.71-.84.7-2.13-.09-2.91a2.18 2.18 0 0 0-2.91-.09z"
                />
                <path
                  d="m12 15-3-3a22 22 0 0 1 2-3.95A12.88 12.88 0 0 1 22 2c0 2.72-.78 7.5-6 11a22.35 22.35 0 0 1-4 2z"
                />
                <path
                  d="M9 12H4s.55-3.03 2-4c1.62-1.08 5 0 5 0"
                />
                <path
                  d="M12 15v5s3.03-.55 4-2c1.08-1.62 0-5 0-5"
                />
              </svg>
            </div>
            <div
              class="flex-1"
            >
              <h5
                class="font-semibold"
              >
                Optimized for AI/ML
              </h5>
              <p
                class="mt-1"
              >
                Container native with a library of templates for leading open source AI models and applications.
              </p>
            </div>
          </div>
          <div
            class="flex gap-4"
          >
            <div
              class="flex h-10 w-10 items-center justify-center rounded-md border border-[#E5E5E5] bg-white"
            >
              <svg
                class="lucide lucide-dollar-sign"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="12"
                  x2="12"
                  y1="2"
                  y2="22"
                />
                <path
                  d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                />
              </svg>
            </div>
            <div
              class="flex-1"
            >
              <h5
                class="font-semibold"
              >
                Cost Savings
              </h5>
              <p
                class="mt-1"
              >
                The most competitive prices for GPUs on-demand, anywhere on the internet.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative z-10 flex w-full flex-1 items-center justify-center overflow-y-auto px-3 py-4 lg:p-0"
      >
        <div>
          Children
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AuthLayout > renders light theme layout 1`] = `
<div>
  <script>
    !function(){try{var d=document.documentElement,n='data-theme',s='setAttribute';var e=localStorage.getItem('theme');if('system'===e||(!e&&false)){var t='(prefers-color-scheme: dark)',m=window.matchMedia(t);if(m.media!==t||m.matches){d.style.colorScheme = 'dark';d[s](n,'dark')}else{d.style.colorScheme = 'light';d[s](n,'light')}}else if(e){d[s](n,e|| '')}else{d[s](n,'light')}if(e==='light'||e==='dark'||!e)d.style.colorScheme=e||'light'}catch(e){}}()
  </script>
  <div
    style=""
  >
    <div
      class="relative flex h-screen"
    >
      <div
        class="absolute flex h-full w-full items-center justify-center overflow-y-auto lg:static lg:w-1/2 bg-[hsl(var(--background))] dark bg-[radial-gradient(circle,rgba(255,255,255,0.07)_2px,transparent_2px)]"
        style="background-size: 24px 24px;"
      >
        <div
          class="hidden max-w-[576px] flex-col gap-6 px-4 lg:flex"
        >
          <div
            class=""
            style="width: 291px; height: 32px;"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 1497 164"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M115.175 107.912L139.598 136.586L153.656 161.428H92.1936L61.4452 107.912H115.175Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M153.64 161.437L184.338 107.921L122.892 0.861938H61.4452L153.64 161.437Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M30.7229 54.3643H92.1692L30.7485 161.423L0 107.907L30.7229 54.3643Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M299.955 51.9753L298.41 68.752C291.789 55.728 276.559 48.6641 260.227 48.6641C229.548 48.6641 209.021 70.9595 209.021 105.175C209.021 139.17 227.561 163.894 260.006 163.894C277.663 163.894 290.685 155.285 297.527 144.027L299.293 161.024H324.454V51.9753H299.955ZM297.086 106.5C297.086 126.146 284.947 139.612 266.186 139.612C247.425 139.612 235.948 125.925 235.948 106.5C235.948 87.074 247.646 73.167 266.407 73.167C285.167 73.167 297.086 86.8533 297.086 106.5Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M370.269 161.024V131.665L386.161 115.109L414.633 161.024H445.532L404.921 95.2417L446.415 51.9753H412.646L370.269 97.6699V0H343.563V161.024H370.269Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M535.959 51.9753L534.414 68.752C527.792 55.728 512.563 48.6641 496.23 48.6641C465.551 48.6641 445.025 70.9595 445.025 105.175C445.025 139.17 463.565 163.894 496.01 163.894C513.667 163.894 526.689 155.285 533.531 144.027L535.297 161.024H560.458V51.9753H535.959ZM533.089 106.5C533.089 126.146 520.95 139.612 502.19 139.612C483.429 139.612 471.952 125.925 471.952 106.5C471.952 87.074 483.65 73.167 502.41 73.167C521.171 73.167 533.089 86.8533 533.089 106.5Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M574.084 127.912C574.084 149.325 591.299 163.894 618.447 163.894C645.374 163.894 664.135 150.208 664.135 128.133C664.135 111.356 654.865 102.968 636.545 98.7736L616.902 94.1379C607.632 91.9305 602.776 87.957 602.776 81.7761C602.776 73.6085 608.956 68.752 619.551 68.752C629.924 68.752 636.104 74.7122 636.325 83.9836H661.927C661.707 62.7919 645.153 48.6641 620.654 48.6641C595.493 48.6641 577.394 61.4674 577.394 82.8798C577.394 100.319 586.885 109.59 606.529 114.005L626.172 118.641C635.883 120.848 638.753 124.822 638.753 130.34C638.753 138.287 631.91 143.365 619.33 143.365C606.97 143.365 599.907 137.404 599.686 127.912H574.084Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M706.063 161.024V101.423C706.063 85.0873 715.995 73.167 732.99 73.167C746.674 73.167 755.723 81.9968 755.723 100.319V161.024H782.65V93.9172C782.65 65.6616 768.525 48.6641 741.598 48.6641C725.927 48.6641 713.126 55.5072 706.283 66.1031V0H679.136V161.024H706.063Z"
                style="fill: hsl(var(--foreground));"
              />
              <path
                d="M804.398 107.936C804.398 141.555 824.533 163.894 854.194 163.894C878.009 163.894 896.628 149.517 901.608 127.621H886.453C882.339 141.334 869.782 150.181 854.194 150.181C832.977 150.181 819.121 133.15 819.121 107.714C819.121 81.394 834.059 64.8056 855.276 64.8056C869.782 64.8056 882.339 72.9892 886.236 87.8082H901.175C897.061 65.6903 879.308 51.3136 855.06 51.3136C824.533 51.3136 804.398 74.3163 804.398 107.936Z"
                fill="#A3A3A3"
              />
              <path
                d="M912.548 107.714C912.548 140.228 935.064 163.894 965.808 163.894C996.551 163.894 1019.07 140.228 1019.07 107.714C1019.07 74.9798 996.551 51.3136 965.808 51.3136C935.064 51.3136 912.548 74.9798 912.548 107.714ZM927.703 107.493C927.703 82.7211 943.291 65.0268 965.808 65.0268C988.107 65.0268 1003.91 82.7211 1003.91 107.493C1003.91 132.708 988.107 150.181 965.808 150.181C943.291 150.181 927.703 132.708 927.703 107.493Z"
                fill="#A3A3A3"
              />
              <path
                d="M1053.57 161.24V105.281C1053.57 81.1729 1065.69 65.2479 1087.13 65.2479C1104.45 65.2479 1115.49 74.0951 1115.49 99.0884V161.24H1130.43V95.7707C1130.43 68.7868 1118.52 51.3136 1089.72 51.3136C1074.57 51.3136 1060.71 59.0549 1053.79 72.768L1051.62 54.189H1038.63V161.24H1053.57Z"
                fill="#A3A3A3"
              />
              <path
                d="M1145.73 131.159C1145.73 151.066 1160.45 163.894 1184.05 163.894C1207.86 163.894 1223.88 151.287 1223.88 132.044C1223.88 116.562 1215.66 107.936 1197.47 103.291L1179.5 98.646C1168.03 95.7707 1162.4 90.02 1162.4 81.8364C1162.4 70.3351 1170.62 63.9209 1185.35 63.9209C1199.42 63.9209 1207.86 71.2198 1208.3 83.6058H1222.8C1222.15 63.6997 1207.86 51.3136 1185.78 51.3136C1163.26 51.3136 1147.89 63.2573 1147.89 82.0576C1147.89 96.6554 1156.77 106.387 1174.95 111.032L1192.92 115.677C1205.26 118.773 1209.59 123.861 1209.59 132.708C1209.59 144.209 1200.07 151.287 1183.83 151.287C1169.11 151.287 1160.02 143.545 1160.02 131.159H1145.73Z"
                fill="#A3A3A3"
              />
              <path
                d="M1236.79 107.714C1236.79 140.228 1259.3 163.894 1290.04 163.894C1320.79 163.894 1343.3 140.228 1343.3 107.714C1343.3 74.9798 1320.79 51.3136 1290.04 51.3136C1259.3 51.3136 1236.79 74.9798 1236.79 107.714ZM1251.94 107.493C1251.94 82.7211 1267.53 65.0268 1290.04 65.0268C1312.34 65.0268 1328.15 82.7211 1328.15 107.493C1328.15 132.708 1312.34 150.181 1290.04 150.181C1267.53 150.181 1251.94 132.708 1251.94 107.493Z"
                fill="#A3A3A3"
              />
              <path
                d="M1378.46 161.24V0H1363.52V161.24H1378.46Z"
                fill="#A3A3A3"
              />
              <path
                d="M1449.85 163.894C1474.53 163.894 1490.77 151.729 1496.4 129.169H1482.11C1478.21 143.324 1467.17 150.844 1450.06 150.844C1427.55 150.844 1414.12 135.804 1413.04 109.705H1496.4V102.185C1496.4 71.8833 1477.13 51.3136 1448.76 51.3136C1418.89 51.3136 1398.54 74.3163 1398.54 107.714C1398.54 141.334 1419.1 163.894 1449.85 163.894ZM1448.76 64.3632C1468.47 64.3632 1481.46 78.0763 1481.46 98.646H1413.47C1416.07 77.634 1429.06 64.3632 1448.76 64.3632Z"
                fill="#A3A3A3"
              />
            </svg>
          </div>
          <p>
            The fastest way to deploy an application on Akash.Network
          </p>
          <div
            class="flex gap-4"
          >
            <div
              class="flex h-10 w-10 items-center justify-center rounded-md border border-[#E5E5E5] bg-white"
            >
              <svg
                class="lucide lucide-zap"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <polygon
                  points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"
                />
              </svg>
            </div>
            <div
              class="flex-1"
            >
              <h5
                class="font-semibold"
              >
                Generous Free Trial
              </h5>
              <p
                class="mt-1"
              >
                $100 of cloud compute credits so you can test real workloads.
              </p>
            </div>
          </div>
          <div
            class="flex gap-4"
          >
            <div
              class="flex h-10 w-10 items-center justify-center rounded-md border border-[#E5E5E5] bg-white"
            >
              <svg
                class="lucide lucide-rocket"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.5 16.5c-1.5 1.26-2 5-2 5s3.74-.5 5-2c.71-.84.7-2.13-.09-2.91a2.18 2.18 0 0 0-2.91-.09z"
                />
                <path
                  d="m12 15-3-3a22 22 0 0 1 2-3.95A12.88 12.88 0 0 1 22 2c0 2.72-.78 7.5-6 11a22.35 22.35 0 0 1-4 2z"
                />
                <path
                  d="M9 12H4s.55-3.03 2-4c1.62-1.08 5 0 5 0"
                />
                <path
                  d="M12 15v5s3.03-.55 4-2c1.08-1.62 0-5 0-5"
                />
              </svg>
            </div>
            <div
              class="flex-1"
            >
              <h5
                class="font-semibold"
              >
                Optimized for AI/ML
              </h5>
              <p
                class="mt-1"
              >
                Container native with a library of templates for leading open source AI models and applications.
              </p>
            </div>
          </div>
          <div
            class="flex gap-4"
          >
            <div
              class="flex h-10 w-10 items-center justify-center rounded-md border border-[#E5E5E5] bg-white"
            >
              <svg
                class="lucide lucide-dollar-sign"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="12"
                  x2="12"
                  y1="2"
                  y2="22"
                />
                <path
                  d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                />
              </svg>
            </div>
            <div
              class="flex-1"
            >
              <h5
                class="font-semibold"
              >
                Cost Savings
              </h5>
              <p
                class="mt-1"
              >
                The most competitive prices for GPUs on-demand, anywhere on the internet.
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="relative z-10 flex w-full flex-1 items-center justify-center overflow-y-auto px-3 py-4 lg:p-0"
      >
        <div>
          Children
        </div>
      </div>
    </div>
  </div>
</div>
`;
